<resources>
    <string name="app_name">MyBooks</string>
    <string name="action_insert_data">Insert Data</string>

    <string name="action_delete_all_entries">Delete All Books</string>

    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit a Book</string>



    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="category_overview">Overview</string>

    <string name="category_supplier">Supplier</string>


    <string name="hint_book_name">Name</string>
    <string name="hint_book_quantity">Quantity</string>

    <string name="hint_book_price">price</string>

    <string name="hint_supplier_phone">Phone Number</string>


    <string name="supplier_unknown">Unknown</string>

    <string name="supplier_jarir">Jarir</string>

    <string name="supplier_Nashron">Nashron</string>

    <string name="editor_insert_book_successful">Book saved</string>

    <string name="editor_insert_book_failed">Error with saving Book</string>

    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <string name="book_price">Book price</string>
    <string name="book_price_currency">EGP</string>
    <string name="book_quantity">Quantity</string>
    <string name="delete_all_dialog_msg">Are you sure you want to delete everything?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="deleted_all_products_message">All books deleted successfully</string>
    <string name="add_book">Add book</string>
    <string name="edit_product">Edit book</string>
    <string name="supplier_amazon">Amazon</string>
    <string name="supplier_jarirr">Jarirr</string>
    <string name="nasheron">Nasheron</string>
    <string name="name_requires">Please enter a book name.</string>
    <string name="price_requires">Please enter a price</string>
    <string name="quantity_requires">Please enter quantity</string>
    <string name="supplier_name_requires">Please select supplier</string>
    <string name="supplier_phone_requires">Please enter a phone number</string>
    <string name="insert_failed">An error occured, please try again.</string>
    <string name="insert_successful">The book was added</string>
    <string name="update_failed">Couldn\'t update, please try again.</string>
    <string name="update_successful">Book was updated</string>
    <string name="unsaved_changes_dialog_msg">You have unsaved changes do you want to save them?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="book_details">Book details</string>
    <string name="quantity_change_msg">Quantity has changed</string>
    <string name="quantity_finish_msg">No more books available</string>
    <string name="delete_product_failed">Delete book failed</string>
    <string name="delete_product_successful">Delete book was succefull</string>
    <string name="delete_dialog_msg">Are you sure u want to delete the book?</string>
    <string name="supplier_name">Supplier name</string>
</resources>
